<?xml version="1.0" encoding="UTF-8"?>
<!--


DO NOT MODIFIY - GENERATED CODE


-->
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.processing</groupId>
  <artifactId>core</artifactId>
  <version>4.0.0</version>
  <name>processing-core</name>
  <description>Jar for ruby-processing projects</description>
  <url>https://github.com/monkstone/processing4-core</url>
  <developers>
    <developer>
      <id>monkstone</id>
      <name>Martin Prout</name>
      <email>mamba2928@yahoo.co.uk</email>
      <roles>
        <role>developer</role>
      </roles>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git://github.com/monkstone/processing4-core.git</connection>
    <developerConnection>scm:git:git@github.com/monkstone/processing4-core.git</developerConnection>
    <url>https://github.com/monkstone/processing4-core</url>
  </scm>
  <issueManagement>
    <system>Github</system>
    <url>https://github.com/monkstone/processing4-core/issues</url>
  </issueManagement>
  <properties>
    <jogl.version>2.3.2</jogl.version>
    <polyglot.dump.pom>pom.xml</polyglot.dump.pom>
    <processing.api>http://processing.github.io/processing-javadocs/core/</processing.api>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <source.directory>src</source.directory>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.jogamp.jogl</groupId>
      <artifactId>jogl-all</artifactId>
      <version>${jogl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jogamp.gluegen</groupId>
      <artifactId>gluegen-rt-main</artifactId>
      <version>${jogl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.processing</groupId>
      <artifactId>video</artifactId>
      <version>3.0.2</version>
    </dependency>
  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>${source.directory}/main/java</directory>
        <includes>
          <include>**/**/*.glsl</include>
          <include>**/*.jnilib</include>
        </includes>
        <excludes>
          <exclude>**/**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <directory>${source.directory}/main/resources</directory>
        <includes>
          <include>**/*.png</include>
          <include>*.txt</include>
        </includes>
      </resource>
    </resources>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <release>11</release>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.10.4</version>
          <configuration>
            <detectOfflineLinks>false</detectOfflineLinks>
            <links>
              <link>${processing.api}</link>
              <link>${jruby.api}</link>
            </links>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.2.0</version>
          <configuration>
            <archive>
              <manifestEntries>
                <Automatic-Module-Name>org.processing.core</Automatic-Module-Name>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-jdeps-plugin</artifactId>
          <version>3.1.2</version>
          <executions>
            <execution>
              <goals>
                <goal>jdkinternals</goal>
                <goal>test-jdkinternals</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
